<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Work</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="choose_image">choose image</string>
    <string name="label_text">文字:</string>
    <string name="label_image1">图1:</string>
    <string name="label_image2">图2:</string>
    <string name="button_text">文字</string>
    <string name="button_image1">图1</string>
    <string name="button_image2">图2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_image1">选择图1：</string>
    <string name="choose_image2">选择图2：</string>
    <string name="sure">确定</string>
    <string name="result">结果</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>
